Make the translation work, but you need to put the translate-text class into the tag.

--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <title>FitnessAndHealth</title>
-
+    <script src = "../All/translate.js"></script>
 </head>
 
 <body>
@@ -72,9 +72,9 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="" id="login-button">
+                    <a class="nav-link textInNavBar" href="" >
                         <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
-                        <span class="translate-text" data-key="login">Login</span>
+                        <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
             </ul>
@@ -156,41 +156,41 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
-                        <span data-translate="true">Unsere Welt</span>
+                        <span data-translate="true" class = "translate-text">Unsere Welt</span>
                     </h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
                             <a href="../Shop/shop.html" class="hover-effects">
-                                <span data-translate="true">Produkte</span>
+                                <span data-translate="true" class = "translate-text">Produkte</span>
                             </a>
                         </li>
                         <li>
                             <a href="../Training/trainings-plan.html" class="hover-effects">
-                                <span data-translate="true">Trainingspläne</span>
+                                <span data-translate="true" class = "translate-text">Trainingspläne</span>
                             </a>
                         </li>
                         <li>
                             <a href="../Nutrition/nutrition.html" class="hover-effects">
-                                <span data-translate="true">Ernährungspläne</span>
+                                <span data-translate="true" class = "translate-text">Ernährungspläne</span>
                             </a>
                         </li>
                         <li>
                             <a href="../AboutUs/about-us.html" class="hover-effects">
-                                <span data-translate="true">Über uns</span>
+                                <span data-translate="true" class = "translate-text">Über uns</span>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
-                        <span data-translate="true">Karriere</span>
+                        <span data-translate="true" class = "translate-text">Karriere</span>
                     </h5>
 
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!" class="hover-effects">
-                                <span data-translate="true">Jobs</span>
+                                <span data-translate="true" class = "translate-text">Jobs</span>
                             </a>
                         </li>
                     </ul>
@@ -198,12 +198,12 @@
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
-                        <span data-translate="true">Kontaktiere uns</span>
+                        <span data-translate="true" class = "translate-text">Kontaktiere uns</span>
                     </h5>
 
                     <div class="form-outline form-white mb-4">
                         <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">
-                            <span data-translate="true">Klicke hier</span>
+                            <span data-translate="true" class = "translate-text">Klicke hier</span>
                         </a>
                     </div>
                 </div>
@@ -237,7 +237,7 @@
 
 <script type="module" src="../All/Auth/auth0.js"></script>
 <script type="module" src="../Mainpage/disclaimer.js"></script>
-<script type="module" src="../All/translate.js"></script>
+
 <script src="../Mainpage/disclaimer.js"></script>
 
 
