--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -12,7 +12,6 @@
             crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
-    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <title>FitnessAndHealth</title>
     <script src = "../All/translate.js"></script>
 </head>
@@ -72,10 +71,9 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="" >
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
+                    <a class="nav-link textInNavBar" href="#" id="login-button-link">
+                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login Icon" width="20" height="20">
                         <span class="translate-text" data-key="login" id="login-button">Login</span>
-                    </a>
                 </li>
             </ul>
         </div>
@@ -137,7 +135,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#6AA84F"
                      class="bi bi-list-check mx-auto d-block mb-3" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
-                          d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0" />
+                           d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3.854 2.146a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 3.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708L2 7.293l1.146-1.147a.5.5 0 0 1 .708 0m0 4a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0" />
                 </svg>
                 <h5 class="card-title" style="color: #6AA84F"><span class="translate-text" data-key="results">Nachhaltige Ergebnisse</span></h5>
                 <p class="card-text"><span class="translate-text" data-key="results_desc">Verbessere deine Gesundheit langfristig und spüre die Veränderung.</span></p>
@@ -145,9 +143,12 @@
         </div>
     </div>
 </div>
+
+<!-- Ka wofur man das braucht
 <button id="login">Login</button>
 <button id="logout" style="display: none;">Logout</button>
 <div id="user-info"></div>
+-->
 
 <div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
 
@@ -235,10 +236,16 @@
     </div>
 </div>
 
-<script type="module" src="../All/Auth/auth0.js"></script>
-<script type="module" src="../Mainpage/disclaimer.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 
-<script src="../Mainpage/disclaimer.js"></script>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
+
+
+<script  src="../Mainpage/disclaimer.js"></script>
+
+<script type="module" src="../All/Auth/auth0.js"></script>
 
 
 </body>
