--- a/fitness-and-health-website/Mainpage/index.html
+++ b/fitness-and-health-website/Mainpage/index.html
@@ -239,13 +239,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
 <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
+<script  src="disclaimer.js"></script>
 
-<script  src="../Mainpage/disclaimer.js"></script>
-
-<script type="module" src="../All/Auth/auth0.js"></script>
+<script type="module" src="../All/Auth/auth0.js" defer></script>
 
 
 </body>
