Added the class translate-text on some tags in the nutrition.html

--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -78,37 +78,37 @@
 </nav>
 
 <section class="text-center py-5" style="margin-top: 5%">
-    <h1 class="title-nutrition"><span data-translate="true">Ernährungspläne</span></h1>
-    <p class="lead text-color"><span data-translate="true">Individuelle Empfehlungen für ältere Menschen und Menschen mit Behinderungen</span></p>
+    <h1 class="title-nutrition translate-text"><span data-translate="true">Ernährungspläne</span></h1>
+    <p class="lead text-color translate-text"><span data-translate="true">Individuelle Empfehlungen für ältere Menschen und Menschen mit Behinderungen</span></p>
 </section>
 
 <div class="container mt-5">
     <div class="row">
         <!-- Left Column with Form -->
         <div class="form-container mx-auto" style="max-width: 500px; background-color: #F6E8D5;">
-            <h2 class="text-center" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Ernährungsformular</span></h2>
+            <h2 class="text-center translate-text" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Ernährungsformular</span></h2>
             <form id="nutritionForm">
                 <div class="mb-3">
-                    <label for="weight" class="form-label" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Gewicht (kg)</span></label>
-                    <input type="number" class="form-control" id="weight" placeholder="z. B. 70" min="0" required style="font-family: sans-serif">
-                    <div class="invalid-feedback"><span data-translate="true">Bitte geben Sie ein gültiges Gewicht ein.</span></div>
+                    <label for="weight" class="form-label translate-text" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Gewicht (kg)</span></label>
+                    <input type="number" class="form-control translate-text" id="weight" placeholder="z. B. 70" min="0" required style="font-family: sans-serif">
+                    <div class="invalid-feedback"><span data-translate="true" class = "translate-text">Bitte geben Sie ein gültiges Gewicht ein.</span></div>
                 </div>
 
                 <div class="mb-3">
                     <label for="height" class="form-label" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Größe (cm)</span></label>
-                    <input type="number" class="form-control" id="height" placeholder="z. B. 175" min="0" required style="font-family: sans-serif">
-                    <div class="invalid-feedback"><span data-translate="true">Bitte geben Sie eine gültige Größe ein.</span></div>
+                    <input type="number" class="form-control translate-text" id="height" placeholder="z. B. 175" min="0" required style="font-family: sans-serif">
+                    <div class="invalid-feedback"><span data-translate="true" class = "translate-text">Bitte geben Sie eine gültige Größe ein.</span></div>
                 </div>
 
                 <div class="mb-3">
-                    <label for="age" class="form-label" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Alter (in Jahren)</span></label>
+                    <label for="age" class="form-label" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true" class = "translate-text">Alter (in Jahren)</span></label>
                     <input type="number" class="form-control" id="age" placeholder="z. B. 20" min="0" required style="font-family: sans-serif">
-                    <div class="invalid-feedback"><span data-translate="true">Bitte geben Sie ein gültiges Alter ein.</span></div>
+                    <div class="invalid-feedback"><span data-translate="true" class = "translate-text">Bitte geben Sie ein gültiges Alter ein.</span></div>
                 </div>
 
                 <div class="mb-3">
                     <label for="gender" class="form-label" style="color: #6AA84F; font-family: sans-serif">
-                        <span data-translate="true">Geschlecht</span>
+                        <span data-translate="true" class = "translate-text">Geschlecht</span>
                     </label>
                     <select class="form-select" id="gender" required style="font-family: sans-serif">
                         <option value="" disabled selected>Wähle dein Geschlecht</option>
