Added the class translate-text on some tags in the nutrition.html

--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -31,27 +31,27 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true">Startseite</span>
+                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar"  href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true">Produkte</span>
+                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true" class = "translate-text">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true">Ernährungspläne</span>
+                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> <span data-translate="true">Trainingspläne</span>
+                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> <span data-translate="true" class = "translate-text">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span data-translate="true">Über uns</span>
+                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span data-translate="true" class = "translate-text">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item dropdown">
