you can translate the shop.html full if the api key is valid

--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -27,31 +27,31 @@
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
                         <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20">
-                        <span data-translate="true">Startseite</span>
+                        <span class="translate-text" data-translate="true">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="shop.html">
                         <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
-                        <span data-translate="true">Produkte</span>
+                        <span class="translate-text" data-translate="true">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
                         <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20">
-                        <span data-translate="true">Ernährungspläne</span>
+                        <span class="translate-text" data-translate="true">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
                         <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20">
-                        <span data-translate="true">Trainingspläne</span>
+                        <span class="translate-text" data-translate="true">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
                         <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20">
-                        <span data-translate="true">Über uns</span>
+                        <span class="translate-text" data-translate="true">Über uns</span>
                     </a>
                 </li>
                 <!-- Sprachauswahl Dropdown -->
@@ -61,10 +61,10 @@
                         <span class="translate-text" data-key="language">Sprache</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarLanguageDropdown">
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('de')">Deutsch</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('en')">English</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('de')">Deutsch</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('en')">English</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('fr')">Français</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -84,8 +84,8 @@
             <div class="image-container">
                 <img src="../icones/shop-picture.jpg" class="img">
                 <div class="image-text">
-                    <h1 class="picture-header" data-translate="true">Willkommen</h1>
-                    <h2 class="picture-subheader" data-translate="true">Fitness&Health Produkte</h2>
+                    <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
+                    <h2 class="picture-subheader translate-text" data-translate="true">Fitness&Health Produkte</h2>
                 </div>
             </div>
         </div>
@@ -93,8 +93,8 @@
             <div class="image-container">
                 <img src="../icones/background-for-shop-weights.jpg" class="img">
                 <div class="image-text">
-                    <h1 class="picture-header" data-translate="true">Willkommen</h1>
-                    <h2 class="picture-subheader" data-translate="true">Fitness&Health Produkte</h2>
+                    <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
+                    <h2 class="picture-subheader translate-text" data-translate="true">Fitness&Health Produkte</h2>
                 </div>
             </div>
         </div>
@@ -102,8 +102,8 @@
             <div class="image-container">
                 <img src="../icones/shop-background-picture-runners-and-weights.jpg" class="img">
                 <div class="image-text">
-                    <h1 class="picture-header" data-translate="true">Willkommen</h1>
-                    <h2 class="picture-subheader" data-translate="true">Fitness&Health Produkte</h2>
+                    <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
+                    <h2 class="picture-subheader translate-text" data-translate="true">Fitness&Health Produkte</h2>
                 </div>
             </div>
         </div>
@@ -111,8 +111,8 @@
             <div class="image-container">
                 <img src="../icones/background-shop-letters.jpg" class="img">
                 <div class="image-text">
-                    <h1 class="picture-header" data-translate="true">Willkommen</h1>
-                    <h2 class="picture-subheader" style="font-family: sans-serif" data-translate="true">Fitness&Health Produkte</h2>
+                    <h1 class="picture-header translate-text" data-translate="true">Willkommen</h1>
+                    <h2 class="picture-subheader translate-text" style="font-family: sans-serif" data-translate="true">Fitness&Health Produkte</h2>
                 </div>
             </div>
         </div>
@@ -128,41 +128,41 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-container mx-auto" style="max-width: 500px;">
-                <h2 class="text-center" style="color: #6AA84F;" data-translate="true">Gesundheitsformular</h2>
+                <h2 class="text-center translate-text" style="color: #6AA84F;" data-translate="true">Gesundheitsformular</h2>
                 <form id="healthForm">
                     <div class="mb-3">
-                        <label for="problem" class="form-label" style="color: #6AA84F;" data-translate="true">Gesundheitliches Problem</label>
-                        <input type="text" class="form-control" id="problem" placeholder="Beschreibe dein Problem" required data-translate="true" data-translate-attr="placeholder">
+                        <label for="problem" class="form-label translate-text" style="color: #6AA84F;" data-translate="true">Gesundheitliches Problem</label>
+                        <input type="text" class="form-control translate-text" id="problem" placeholder="Beschreibe dein Problem" required data-translate="true" data-translate-attr="placeholder">
                     </div>
 
                     <div class="mb-3">
-                        <label for="max-price" class="form-label" style="color: #6AA84F;" data-translate="true">Maximaler Preis</label>
-                        <input type="number" class="form-control" id="max-price" placeholder="z. B. 100" min="0" required data-translate="true" data-translate-attr="placeholder">
+                        <label for="max-price" class="form-label translate-text" style="color: #6AA84F;" data-translate="true">Maximaler Preis</label>
+                        <input type="number" class="form-control translate-text" id="max-price" placeholder="z. B. 100" min="0" required data-translate="true" data-translate-attr="placeholder">
                     </div>
 
                     <div class="mb-3">
-                        <label for="category" class="form-label" style="color: #6AA84F;" data-translate="true">Kategorie</label>
+                        <label for="category" class="form-label translate-text" style="color: #6AA84F;" data-translate="true">Kategorie</label>
                         <select class="form-select" id="category" required>
-                            <option value="" disabled selected data-translate="true">Wähle eine Kategorie</option>
-                            <option value="supplemente" data-translate="true">Supplemente</option>
-                            <option value="fitness" data-translate="true">Fitnessgeräte</option>
+                            <option value="" disabled selected data-translate="true" class="translate-text">Wähle eine Kategorie</option>
+                            <option value="supplemente" data-translate="true" class="translate-text">Supplemente</option>
+                            <option value="fitness" data-translate="true" class="translate-text">Fitnessgeräte</option>
 
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-custom w-100" data-translate="true" id = "submit-button" onclick="">Absenden</button>
+                    <button type="submit" class="btn btn-custom w-100 translate-text" data-translate="true" id = "submit-button" onclick="">Absenden</button>
                 </form>
             </div>
         </div>
         <div class="col-md-6">
             <div class="explanation-container p-4 rounded">
-                <h3 class="mb-3" style="color: #6AA84F;" data-translate="true">Wie funktioniert es?</h3>
-                <p class="text-muted" data-translate="true">
+                <h3 class="mb-3 translate-text" style="color: #6AA84F;" data-translate="true">Wie funktioniert es?</h3>
+                <p class="text-muted translate-text" data-translate="true">
                     Unser Gesundheitsformular hilft Ihnen, passende Lösungen für Ihre gesundheitlichen Anliegen zu finden:
                 </p>
                 <ul class="list-group list-group-flush mb-3">
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F;" data-translate="true">1. Beschreiben Sie Ihr gesundheitliches Problem</li>
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F;" data-translate="true">2. Geben Sie Ihr Budget an</li>
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F;" data-translate="true">3. Wählen Sie die passende Kategorie</li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">1. Beschreiben Sie Ihr gesundheitliches Problem</li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">2. Geben Sie Ihr Budget an</li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">3. Wählen Sie die passende Kategorie</li>
                 </ul>
             </div>
         </div>
@@ -170,9 +170,9 @@
 </div>
 
 <div class="container mt-5">
-    <h2 class="text-center mb-4" style="color: #6AA84F;" data-translate="true">Passende Produkte</h2>
-    <div id="filter-info" class="mb-4 text-center" style="display: none;">
-        <p class="text-muted" data-translate="true">Angezeigt: <span id="filter-criteria"></span></p>
+    <h2 class="text-center mb-4 translate-text" style="color: #6AA84F;" data-translate="true">Passende Produkte</h2>
+    <div id="filter-info" class="mb-4 text-center translate-text" style="display: none;">
+        <p class="text-muted translate-text" data-translate="true">Angezeigt: <span id="filter-criteria"></span></p>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4" id="products-container">
         <!-- Produkte werden dynamisch eingefügt -->
@@ -183,7 +183,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="productModalLabel" data-translate="true">Produktdetails</h5>
+                <h5 class="modal-title translate-text" id="productModalLabel" data-translate="true">Produktdetails</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Schließen</button>
+                <button type="button" class="btn btn-secondary translate-text" data-bs-dismiss="modal">Schließen</button>
                 <i class="fas fa-shopping-cart me-2"></i>
             </div>
         </div>
@@ -209,41 +209,41 @@
         <div class="container p-4">
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="color: #F6E8D5; font-family: sans-serif">
                         <span data-translate="true">Unsere Welt</span>
                     </h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="../Shop/shop.html" class="hover-effects">
+                            <a href="../Shop/shop.html" class="hover-effects translate-text">
                                 <span data-translate="true">Produkte</span>
                             </a>
                         </li>
                         <li>
-                            <a href="../Training/trainings-plan.html" class="hover-effects">
+                            <a href="../Training/trainings-plan.html" class="hover-effects translate-text">
                                 <span data-translate="true">Trainingspläne</span>
                             </a>
                         </li>
                         <li>
-                            <a href="nutrition.html" class="hover-effects">
+                            <a href="../Nutrition/nutrition.html" class="hover-effects translate-text">
                                 <span data-translate="true">Ernährungspläne</span>
                             </a>
                         </li>
                         <li>
-                            <a href="../AboutUs/about-us.html" class="hover-effects">
+                            <a href="../AboutUs/about-us.html" class="hover-effects translate-text">
                                 <span data-translate="true">Über uns</span>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="font-family: sans-serif">
                         <span data-translate="true">Karriere</span>
                     </h5>
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="hover-effects">
+                            <a href="#!" class="hover-effects translate-text">
                                 <span data-translate="true">Jobs</span>
                             </a>
                         </li>
@@ -251,12 +251,12 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="font-family: sans-serif">
                         <span data-translate="true">Kontaktiere uns</span>
                     </h5>
 
                     <div class="form-outline form-white mb-4">
-                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">
+                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects translate-text">
                             <span data-translate="true">Klicke hier</span>
                         </a>
                     </div>
