translates at the aboutus page and changed my text

--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -23,27 +23,27 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true">Startseite</span>
+                        <img src="../icones/bxs-home.svg" class="changeColor translate-text" alt="Shop" width="20" height="20"> <span data-translate="true">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> <span data-translate="true">Produkte</span>
+                        <img src="../icones/bx-shopping-bag.svg" class="changeColor translate-text" alt="Shop" width="20" height="20"> <span data-translate="true">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true">Ernährungspläne</span>
+                        <img src="../icones/bx-baguette.svg" class="changeColor translate-text" alt="Ernährungspläne" width="20" height="20"> <span data-translate="true">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> <span data-translate="true">Trainingspläne</span>
+                        <img src="../icones/bx-run.svg" class="changeColor translate-text" alt="Trainingspläne" width="20" height="20"> <span data-translate="true">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span data-translate="true">Über uns</span>
+                        <img src="../icones/bxs-group.svg" class="changeColor translate-text" alt="Über uns" width="20" height="20"> <span data-translate="true">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item dropdown">
@@ -52,10 +52,10 @@
                         <span class="translate-text" data-key="language">Sprache</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarLanguageDropdown">
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('de')">Deutsch</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('en')">English</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
-                        <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('de')">Deutsch</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('en')">English</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('fr')">Français</a></li>
+                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -69,7 +69,7 @@
     </div>
 </nav>
 
-<h1 class="h1-in-about-us"><span data-translate="true">Über uns</span></h1>
+<h1 class="h1-in-about-us translate-text"><span data-translate="true">Über uns</span></h1>
 <!-- Team Members Section -->
 <div class="container mt-5">
     <!-- Jan -->
@@ -81,7 +81,7 @@
             </button>
         </div>
         <div class="col-md-8">
-            <p class="styleForPInAboutUsWritingTextLeft text-color">
+            <p class="styleForPInAboutUsWritingTextLeft text-color translate-text">
                 <span data-translate="true">Ich bin Jan Brunner, 16 Jahre alt und leite dieses Projekt zusammen mit meinen Schulkollegen. In meiner Freizeit beschäftige ich mich mit Webprogrammierung, sowie auch C# und C Programmierung.</span>
             </p>
         </div>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-8">
             <p class="styleForPInAboutUsWritingTextRight text-color">
-                <span data-translate="true">Ich bin Lorenz Parzer, 17 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding. In meiner Freizeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbessern in allen Facetten. Ich liebe es zu Programmieren und besuche gerne die HTL Leonding.</span>
+                <span data-translate="true">Ich bin Lorenz Parzer, 17 Jahre alt, komme aus Österreich und besuche die HTL Leonding. In meiner Freizeit trainiere ich gerne im Fitnessstudio und lerne gerne neue Dinge wie Programmieren in C#.</span>
             </p>
         </div>
     </div>
