fixed loading and filtering in the product page

--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -129,10 +129,6 @@
             <div class="form-container mx-auto" style="max-width: 500px;">
                 <h2 class="text-center translate-text" style="color: #6AA84F;" data-translate="true">Gesundheitsformular</h2>
                 <form id="healthForm">
-                    <div class="mb-3">
-                        <label for="problem" class="form-label translate-text" style="color: #6AA84F;" data-translate="true">Gesundheitliches Problem</label>
-                        <input type="text" class="form-control translate-text" id="problem" placeholder="Beschreibe dein Problem" required data-translate="true" data-translate-attr="placeholder">
-                    </div>
 
                     <div class="mb-3">
                         <label for="max-price" class="form-label translate-text" style="color: #6AA84F;" data-translate="true">Maximaler Preis</label>
@@ -148,7 +144,7 @@
 
                         </select>
                     </div>
-                    <button type="submit" class="btn btn-custom w-100 translate-text" data-translate="true" id = "submit-button" onclick="">Absenden</button>
+                    <button type="button" class="btn btn-custom w-100 translate-text" data-translate="true" id = "submit-button" onclick="">Absenden</button>
                 </form>
             </div>
         </div>
@@ -159,9 +155,8 @@
                     Unser Gesundheitsformular hilft Ihnen, passende Lösungen für Ihre gesundheitlichen Anliegen zu finden:
                 </p>
                 <ul class="list-group list-group-flush mb-3">
-                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">1. Beschreiben Sie Ihr gesundheitliches Problem</li>
-                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">2. Geben Sie Ihr Budget an</li>
-                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">3. Wählen Sie die passende Kategorie</li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">1. Geben Sie Ihr Budget an</li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F;" data-translate="true">2. Wählen Sie die passende Kategorie</li>
                 </ul>
             </div>
         </div>
