deleted cards for subpages

--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -162,7 +162,10 @@
 </div>
 
 
-
+<div class=" container explanation-container">
+    <h2 style="color: #6AA84F">Wieso Pläne für Ältere und Beeinträchtigte?</h2>
+    <p class="text-color">Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+</div>
 
 <div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
