--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -10,6 +10,16 @@
     <script src="../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <title>Über uns</title>
+    <script src="../All/Auth/auth0.js"></script>
+    <script>
+        await initializeAuth0Client()
+        let a = window.auth0.getTokenSilently();
+        a.then(function (token) {
+            console.log(token);
+        }).catch(function (error) {
+            console.error('Error fetching token:', error);
+        });
+    </script>
 </head>
 <body>
 
@@ -59,9 +69,9 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="">
-                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
-                        <span class="translate-text" data-key="login">Login</span>
+                    <a class="nav-link textInNavBar" href="#" id="login-button-link">
+                        <img src="../icones/login-picture.svg" class="changeColor" alt="Login Icon" width="20" height="20">
+                        <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
             </ul>
@@ -133,7 +143,7 @@
     </div>
 </div>
 
-<<div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
+<div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
 
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container p-4">
@@ -199,6 +209,11 @@
     </footer>
 
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
