--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -2,51 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trainingspläne</title>
+    <title data-key="page-title">Trainingspläne</title>
     <link rel="icon" href="../icones/favicon-32x32.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-    <script src = "../All/translate.js"></script>
+    <script src="../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
-    <script src = "getExercises.js"></script>
+    <script src="getExercises.js"></script>
 </head>
 <body>
 <!-- Sticky Top Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast" >
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed contrast">
     <div class="container-fluid">
-
         <img src="../icones/logo-green-no-text.png" alt="Home" width="50" height="50">
-
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Startseite
+                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Home" width="20" height="20">
+                        <span class="translate-text" data-key="nav-home">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar"  href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
+                    <a class="nav-link textInNavBar" href="../Shop/shop.html">
+                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20">
+                        <span class="translate-text" data-key="nav-products">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
+                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Nutrition Plans" width="20" height="20">
+                        <span class="translate-text" data-key="nav-nutrition">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
+                        <img src="../icones/bx-run.svg" class="changeColor" alt="Training Plans" width="20" height="20">
+                        <span class="translate-text" data-key="nav-training">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> Über uns
+                        <img src="../icones/bxs-group.svg" class="changeColor" alt="About Us" width="20" height="20">
+                        <span class="translate-text" data-key="nav-about">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item dropdown">
@@ -62,7 +66,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="">
+                    <a class="nav-link textInNavBar" href="#">
                         <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
                         <span class="translate-text" data-key="login">Login</span>
                     </a>
@@ -72,10 +76,13 @@
     </div>
 </nav>
 
+
 <!-- Header Container -->
 <section class="text-center py-5" style="margin-top: 5%">
-    <h1 class="title-training">Trainingspläne</h1>
-    <p class="lead text-color">Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern</p>
+    <h1 class="title-training translate-text" data-key="header-title">Trainingspläne</h1>
+    <p class="lead text-color translate-text" data-key="header-subtitle">
+        Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern
+    </p>
 </section>
 
 <div class="container mt-5">
@@ -83,60 +90,59 @@
         <!-- Left Column with Form -->
         <div class="col-md-6">
             <div class="form-container mx-auto" style="max-width: 500px;">
-                <h2 class="text-center t"  style="color: #6AA84F;">Trainingsformular</h2>
+                <h2 class="text-center t translate-text" data-key="form-title" style="color: #6AA84F;">Trainingsformular</h2>
                 <form>
                     <div class="mb-3">
-                        <label for="weight" class="form-label" style="color: #6AA84F;">Gewicht (kg)</label>
+                        <label for="weight" class="form-label translate-text" data-key="form-weight-label" style="color: #6AA84F;">Gewicht (kg)</label>
                         <input type="number" class="form-control" id="weight" placeholder="z. B. 70" min="0" required>
                     </div>
 
                     <div class="mb-3">
-                        <label for="height" class="form-label" style="color: #6AA84F;"> Größe (cm)</label>
+                        <label for="height" class="form-label translate-text" data-key="form-height-label" style="color: #6AA84F;">Größe (cm)</label>
                         <input type="number" class="form-control" id="height" placeholder="z. B. 175" min="0" required>
                     </div>
 
                     <div class="mb-3">
-                        <label for="height" class="form-label " style="color: #6AA84F;">Alter (in Jahren)</label>
+                        <label for="age" class="form-label translate-text" data-key="form-age-label" style="color: #6AA84F;">Alter (in Jahren)</label>
                         <input type="number" class="form-control" id="age" placeholder="z. B. 20" min="0" required>
                     </div>
 
                     <div class="mb-3">
-                        <label for="activity-level" class="form-label " style="color: #6AA84F;">Geschlecht</label>
+                        <label for="gender" class="form-label translate-text" data-key="form-gender-label" style="color: #6AA84F;">Geschlecht</label>
                         <select class="form-select" id="gender" required>
-                            <option value="" disabled selected>Wähle dein Geschlecht</option>
-                            <option value="Männlich">Männlich</option>
-                            <option value="Weiblich">Weiblich</option>
+                            <option value="" disabled selected data-key="form-gender-placeholder">Wähle dein Geschlecht</option>
+                            <option value="Männlich" data-key="gender-male">Männlich</option>
+                            <option value="Weiblich" data-key="gender-female">Weiblich</option>
                         </select>
                     </div>
 
                     <div class="mb-3">
-                        <label for="activity-level" class="form-label " style="color: #6AA84F;">Aktivitätslevel</label>
+                        <label for="activity-level" class="form-label translate-text" data-key="form-activity-label" style="color: #6AA84F;">Aktivitätslevel</label>
                         <select class="form-select" id="activity-level" required>
-                            <option value="" disabled selected>Wähle dein Aktivitätslevel</option>
-                            <option value="low">Niedrig</option>
-                            <option value="moderate">Mittel</option>
-                            <option value="high">Hoch</option>
+                            <option value="" disabled selected data-key="form-activity-placeholder">Wähle dein Aktivitätslevel</option>
+                            <option value="low" data-key="activity-low">Niedrig</option>
+                            <option value="moderate" data-key="activity-moderate">Mittel</option>
+                            <option value="high" data-key="activity-high">Hoch</option>
                         </select>
                     </div>
 
                     <div class="mb-3">
-                        <label for="disabilities" class="form-label " style="color: #6AA84F;">Weitere Einschränkungen</label>
+                        <label for="disabilities" class="form-label translate-text" data-key="form-disabilities-label" style="color: #6AA84F;">Weitere Einschränkungen</label>
                         <input type="text" class="form-control" id="disabilities" placeholder="z. B. Mobilitätseinschränkungen">
                     </div>
 
-
                     <div class="mb-3">
-                        <label for="activity-level" class="form-label " style="color: #6AA84F;">Ziel</label>
+                        <label for="fitness-goal" class="form-label translate-text" data-key="form-goal-label" style="color: #6AA84F;">Ziel</label>
                         <select class="form-select" id="fitness-goal" required>
-                            <option value="" disabled selected>Wähle dein Ziel</option>
-                            <option value="low">Gewicht halten</option>
-                            <option value="moderate">Abnehmen</option>
-                            <option value="high">Muskelaufbau</option>
+                            <option value="" disabled selected data-key="form-goal-placeholder">Wähle dein Ziel</option>
+                            <option value="low" data-key="goal-maintain-weight">Gewicht halten</option>
+                            <option value="moderate" data-key="goal-lose-weight">Abnehmen</option>
+                            <option value="high" data-key="goal-build-muscle">Muskelaufbau</option>
                         </select>
                     </div>
-                    <!-- Submit Button -->
-                    <button type="button" class="btn btn-custom w-100" style = "color: black">Absenden</button>
 
+                    <!-- Submit Button -->
+                    <button type="button" class="btn btn-custom w-100 translate-text" data-key="form-submit-button" style="color: black">Absenden</button>
                 </form>
             </div>
         </div>
@@ -144,16 +150,22 @@
         <!-- Right Column with Explanation -->
         <div class="col-md-6 col-12">
             <div class="explanation-container p-4 rounded">
-                <h3 class="mb-3" style="color: #6AA84F;">Wie funktioniert es?</h3>
-                <p class="text-muted">
+                <h3 class="mb-3 translate-text" data-key="explanation-title" style="color: #6AA84F;">Wie funktioniert es?</h3>
+                <p class="text-muted translate-text" data-key="explanation-text-1">
                     Dieses Formular hilft Ihnen, personalisierte Trainingspläne zu erstellen:
                 </p>
                 <ul class="list-group list-group-flush mb-3">
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F;">1. Geben Sie Ihr Gewicht und Ihre Größe an</li>
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F;">2. Wählen Sie Ihr Aktivitätslevel</li>
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F;">3. Teilen Sie uns weitere Einschränkungen mit</li>
+                    <li class="list-group-item bg-transparent translate-text" data-key="explanation-step-1" style="color: #6AA84F;">
+                        1. Geben Sie Ihr Gewicht und Ihre Größe an
+                    </li>
+                    <li class="list-group-item bg-transparent translate-text" data-key="explanation-step-2" style="color: #6AA84F;">
+                        2. Wählen Sie Ihr Aktivitätslevel
+                    </li>
+                    <li class="list-group-item bg-transparent translate-text" data-key="explanation-step-3" style="color: #6AA84F;">
+                        3. Teilen Sie uns weitere Einschränkungen mit
+                    </li>
                 </ul>
-                <p class="text-muted">
+                <p class="text-muted translate-text" data-key="explanation-text-2">
                     Nach dem Absenden erstellen wir einen maßgeschneiderten Trainingsplan, der auf Ihre Bedürfnisse abgestimmt ist.
                 </p>
             </div>
@@ -162,75 +174,62 @@
 </div>
 
 
-<div class=" container explanation-container">
-    <h2 style="color: #6AA84F">Wieso Pläne für Ältere und Beeinträchtigte?</h2>
-    <p class="text-color">Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+
+<div class="container explanation-container">
+    <h2 class="translate-text" data-key="why-plans-title" style="color: #6AA84F">Wieso Pläne für Ältere und Beeinträchtigte?</h2>
+    <p class="text-color translate-text" data-key="why-plans-text">
+        Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.
+    </p>
 </div>
 
-<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
-
-    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style=" box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
-        <!-- Grid container -->
+<div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
+    <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
         <div class="container p-4">
-            <!--Grid row-->
             <div class="row">
-                <!--Grid column-->
-                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;">Unsere Welt</h5>
 
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" data-key="footer-our-world" style="color: #F6E8D5;">Unsere Welt</h5>
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="../Shop/shop.html" class="hover-effects" >Produkte</a>
+                            <a href="../Shop/shop.html" class="hover-effects translate-text" data-key="footer-products">Produkte</a>
                         </li>
                         <li>
-                            <a href="trainings-plan.html" class="hover-effects" >Trainingspläne</a>
+                            <a href="trainings-plan.html" class="hover-effects translate-text" data-key="footer-training-plans">Trainingspläne</a>
                         </li>
                         <li>
-                            <a href="../Nutrition/nutrition.html" class="hover-effects">Ernährungspläne</a>
+                            <a href="../Nutrition/nutrition.html" class="hover-effects translate-text" data-key="footer-nutrition-plans">Ernährungspläne</a>
                         </li>
                         <li>
-                            <a href="../AboutUs/about-us.html" class="hover-effects">Über uns</a>
+                            <a href="../AboutUs/about-us.html" class="hover-effects translate-text" data-key="footer-about-us">Über uns</a>
                         </li>
                     </ul>
                 </div>
-                <!--Grid column-->
 
-
-
-                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
-
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" data-key="footer-career">Karriere</h5>
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="hover-effects">Jobs</a>
+                            <a href="#!" class="hover-effects translate-text" data-key="footer-jobs">Jobs</a>
                         </li>
                     </ul>
                 </div>
-                <!--Grid column-->
 
-                <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
-
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" data-key="footer-contact-us">Kontaktiere uns</h5>
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
-
+                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects translate-text" data-key="footer-click-here">Klicke hier</a>
                     </div>
+                </div>
 
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <img src="../icones/logo-green-no-text.png" class="bg-image hover-overlay ripple shadow-1-strong rounded" style="width: 50%">
                 </div>
-                <!--Grid column-->
-                <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="../icones/logo-green-no-text.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
-                </div>
+
             </div>
-            <!--Grid row-->
         </div>
-        <!-- Grid container -->
-
     </footer>
-
 </div>
+
 
 
 </body>
