--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -62,10 +62,10 @@
                         <span class="translate-text" data-key="language">Sprache</span>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarLanguageDropdown">
-                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('de')">Deutsch</a></li>
-                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('en')">English</a></li>
-                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('fr')">Français</a></li>
-                        <li><a class="dropdown-item translate-text" href="#" onclick="setLanguage('es')">Español</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('de')">Deutsch</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('en')">English</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('fr')">Français</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="setLanguage('es')">Español</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -215,6 +215,6 @@ integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIe
 crossorigin="anonymous"></script>
 <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
